generate predicateeditortemplates programmatically
Co-authored-by: Eitot <Eitot@users.noreply.github.com>

--- a/Vienna/Interfaces/Base.lproj/SearchFolder.xib
+++ b/Vienna/Interfaces/Base.lproj/SearchFolder.xib
@@ -53,227 +53,7 @@
                                 <predicateEditor verticalHuggingPriority="750" nestingMode="compound" rowHeight="32" id="cr7-ge-FCd">
                                     <rect key="frame" x="0.0" y="0.0" width="616" height="391"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <rowTemplates>
-                                        <predicateEditorRowTemplate rowType="compound" id="egp-qs-jYo">
-                                            <popUpMenus>
-                                                <menu id="8Wf-mf-JMf">
-                                                    <items>
-                                                        <menuItem title="Any" state="on" id="jfK-U9-Z4R">
-                                                            <integer key="representedObject" value="2"/>
-                                                        </menuItem>
-                                                        <menuItem title="All" id="1ah-TW-m6B">
-                                                            <integer key="representedObject" value="1"/>
-                                                        </menuItem>
-                                                        <menuItem title="None" id="fGN-mS-wA6">
-                                                            <integer key="representedObject" value="0"/>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="CIi-HB-211">
-                                                    <items>
-                                                        <menuItem title="of the following are true" state="on" id="xBL-Th-tJ6"/>
-                                                    </items>
-                                                </menu>
-                                            </popUpMenus>
-                                        </predicateEditorRowTemplate>
-                                        <predicateEditorRowTemplate rowType="simple" id="oi2-sW-APA">
-                                            <array key="leftExpressionObject">
-                                                <expression type="constant">
-                                                    <string key="constantValue">Subject</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">Text</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">Author</string>
-                                                </expression>
-                                            </array>
-                                            <integer key="rightExpressionObject" value="700"/>
-                                            <popUpMenus>
-                                                <menu id="wwc-Nt-Uko">
-                                                    <items>
-                                                        <menuItem title="Subject" state="on" id="mh1-7i-hNH">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Subject</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="Text" id="Clc-8S-OGO">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Text</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="Author" id="qWf-Iy-fyw">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Author</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="eeD-1g-hMk">
-                                                    <items>
-                                                        <menuItem title="contains" state="on" id="Msm-QS-oTg">
-                                                            <integer key="representedObject" value="99"/>
-                                                        </menuItem>
-                                                        <menuItem title="is" id="y4h-OL-Am5">
-                                                            <integer key="representedObject" value="4"/>
-                                                        </menuItem>
-                                                        <menuItem title="is not" id="iHZ-E9-ogV">
-                                                            <integer key="representedObject" value="5"/>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                            </popUpMenus>
-                                        </predicateEditorRowTemplate>
-                                        <predicateEditorRowTemplate rowType="simple" id="ywR-Au-79H">
-                                            <array key="leftExpressionObject">
-                                                <expression type="keyPath">
-                                                    <string key="keyPath">Marked</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">Deleted</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">HasEnclosure</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">Flagged</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">Read</string>
-                                                </expression>
-                                            </array>
-                                            <array key="rightExpressionObject">
-                                                <expression type="constant">
-                                                    <string key="constantValue">Yes</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">No</string>
-                                                </expression>
-                                            </array>
-                                            <popUpMenus>
-                                                <menu id="8tt-61-w2l">
-                                                    <items>
-                                                        <menuItem title="Marked" state="on" id="L6f-93-jlW">
-                                                            <expression key="representedObject" type="keyPath">
-                                                                <string key="keyPath">Marked</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="Deleted" id="Dje-sO-bHq">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Deleted</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="HasEnclosure" id="FpK-0L-zGv">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">HasEnclosure</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="Flagged" id="FUp-Hc-WHe">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Flagged</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="Read" id="JJO-eA-r8N">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Read</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="rf8-UD-l1v">
-                                                    <items>
-                                                        <menuItem title="is" state="on" id="1z1-1v-GTV">
-                                                            <integer key="representedObject" value="4"/>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="vmd-jB-yAh">
-                                                    <items>
-                                                        <menuItem title="Yes" state="on" id="2IK-2s-72J">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Yes</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="No" id="CSy-jx-WmX">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">No</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                            </popUpMenus>
-                                        </predicateEditorRowTemplate>
-                                        <predicateEditorRowTemplate rowType="simple" id="npF-oN-pT0">
-                                            <array key="leftExpressionObject">
-                                                <expression type="constant">
-                                                    <string key="constantValue">Date</string>
-                                                </expression>
-                                            </array>
-                                            <array key="rightExpressionObject">
-                                                <expression type="constant">
-                                                    <string key="constantValue">today</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">yesterday</string>
-                                                </expression>
-                                                <expression type="constant">
-                                                    <string key="constantValue">last week</string>
-                                                </expression>
-                                            </array>
-                                            <popUpMenus>
-                                                <menu id="Hlp-tU-UKG">
-                                                    <items>
-                                                        <menuItem title="Date" state="on" id="FBj-xc-oTC">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">Date</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="UaN-cb-wyb">
-                                                    <items>
-                                                        <menuItem title="is" state="on" id="OeF-ya-gJs">
-                                                            <integer key="representedObject" value="4"/>
-                                                        </menuItem>
-                                                        <menuItem title="is greater than" id="eiY-Pb-5sI">
-                                                            <integer key="representedObject" value="2"/>
-                                                        </menuItem>
-                                                        <menuItem title="is less than" id="NMb-LH-ULD">
-                                                            <integer key="representedObject" value="0"/>
-                                                        </menuItem>
-                                                        <menuItem title="is greater than or equal to" id="CXy-ZH-c0j">
-                                                            <integer key="representedObject" value="3"/>
-                                                        </menuItem>
-                                                        <menuItem title="is less than or equal to" id="suK-UH-h2G">
-                                                            <integer key="representedObject" value="1"/>
-                                                        </menuItem>
-                                                        <menuItem title="is not" id="EKz-BT-7sf">
-                                                            <integer key="representedObject" value="5"/>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                                <menu id="Pcw-lE-Kal">
-                                                    <items>
-                                                        <menuItem title="today" state="on" id="SBI-Wd-vm8">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">today</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="yesterday" id="3To-NX-pJT">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">yesterday</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                        <menuItem title="last week" id="Z2p-gj-2ku">
-                                                            <expression key="representedObject" type="constant">
-                                                                <string key="constantValue">last week</string>
-                                                            </expression>
-                                                        </menuItem>
-                                                    </items>
-                                                </menu>
-                                            </popUpMenus>
-                                        </predicateEditorRowTemplate>
-                                    </rowTemplates>
+                                    <rowTemplates/>
                                 </predicateEditor>
                             </subviews>
                         </clipView>
