--- a/Vienna/Interfaces/Base.lproj/SearchFolder.xib
+++ b/Vienna/Interfaces/Base.lproj/SearchFolder.xib
@@ -8,12 +8,9 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SmartFolder">
             <connections>
-                <outlet property="cancelButton" destination="10" id="40"/>
+                <outlet property="folderNameTextField" destination="8" id="92"/>
                 <outlet property="predicateEditor" destination="cr7-ge-FCd" id="Rp6-33-jVb"/>
-                <outlet property="predicateView" destination="fqA-NR-3TG" id="QPC-sj-9fY"/>
                 <outlet property="saveButton" destination="9" id="41"/>
-                <outlet property="searchWindow" destination="6" id="54"/>
-                <outlet property="smartFolderName" destination="8" id="92"/>
                 <outlet property="window" destination="6" id="50"/>
             </connections>
         </customObject>
@@ -22,36 +19,52 @@
         <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" tabbingMode="disallowed" id="6" userLabel="Search Folder" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" resizable="YES"/>
             <rect key="contentRect" x="46" y="594" width="658" height="489"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1025"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1512" height="944"/>
             <value key="minSize" type="size" width="647" height="178"/>
             <view key="contentView" wantsLayer="YES" id="5">
                 <rect key="frame" x="0.0" y="0.0" width="658" height="489"/>
-                <autoresizingMask key="autoresizingMask"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                        <rect key="frame" x="18" y="453" width="120" height="16"/>
-                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Smart folder name:" id="94">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" preferredMaxLayoutWidth="180" translatesAutoresizingMaskIntoConstraints="NO" id="8">
-                        <rect key="frame" x="144" y="450" width="191" height="21"/>
-                        <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" drawsBackground="YES" usesSingleLineMode="YES" id="95">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
+                    <stackView distribution="fill" orientation="horizontal" alignment="firstBaseline" horizontalStackHuggingPriority="250" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nW1-qA-XPv">
+                        <rect key="frame" x="20" y="448" width="304" height="21"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="7">
+                                <rect key="frame" x="-2" y="3" width="120" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Smart folder name:" id="94">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8">
+                                <rect key="frame" x="124" y="0.0" width="180" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" priority="750" constant="180" id="dsG-rZ-eeE"/>
+                                </constraints>
+                                <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="95">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <visibilityPriorities>
+                            <integer value="1000"/>
+                            <integer value="1000"/>
+                        </visibilityPriorities>
+                        <customSpacing>
+                            <real value="3.4028234663852886e+38"/>
+                            <real value="3.4028234663852886e+38"/>
+                        </customSpacing>
+                    </stackView>
                     <scrollView autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqA-NR-3TG">
-                        <rect key="frame" x="20" y="50" width="618" height="393"/>
+                        <rect key="frame" x="20" y="50" width="618" height="390"/>
                         <clipView key="contentView" id="7sL-dq-W1R">
-                            <rect key="frame" x="1" y="1" width="616" height="391"/>
+                            <rect key="frame" x="1" y="1" width="616" height="388"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <predicateEditor verticalHuggingPriority="750" nestingMode="compound" rowHeight="32" id="cr7-ge-FCd">
-                                    <rect key="frame" x="0.0" y="0.0" width="616" height="391"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="616" height="388"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <rowTemplates/>
                                 </predicateEditor>
@@ -62,12 +75,15 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="DiP-Dg-BBA">
-                            <rect key="frame" x="601" y="1" width="16" height="214"/>
+                            <rect key="frame" x="600" y="2" width="16" height="386"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9">
-                        <rect key="frame" x="581" y="13" width="64" height="32"/>
+                        <rect key="frame" x="561" y="13" width="84" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="EeP-uL-1rw"/>
+                        </constraints>
                         <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="96">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -80,7 +96,10 @@ DQ
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="10">
-                        <rect key="frame" x="507" y="13" width="76" height="32"/>
+                        <rect key="frame" x="479" y="13" width="84" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="qUC-FM-hKu"/>
+                        </constraints>
                         <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="97">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -102,21 +121,18 @@ Gw
                     </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="8" firstAttribute="baseline" secondItem="7" secondAttribute="baseline" id="0wf-A1-ioR"/>
                     <constraint firstAttribute="trailing" secondItem="9" secondAttribute="trailing" constant="20" symbolic="YES" id="2Jz-0s-O2s"/>
                     <constraint firstItem="tkM-FF-D8y" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="2tg-Qv-npH"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8" secondAttribute="trailing" constant="20" symbolic="YES" id="Moi-of-e0Q"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nW1-qA-XPv" secondAttribute="trailing" constant="20" symbolic="YES" id="Moi-of-e0Q"/>
                     <constraint firstItem="tkM-FF-D8y" firstAttribute="firstBaseline" secondItem="10" secondAttribute="firstBaseline" id="NZp-8N-wNg"/>
                     <constraint firstItem="9" firstAttribute="leading" secondItem="10" secondAttribute="trailing" constant="12" symbolic="YES" id="Ps2-WR-Xnc"/>
-                    <constraint firstItem="7" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="TMr-sX-Kob"/>
-                    <constraint firstItem="8" firstAttribute="leading" secondItem="7" secondAttribute="trailing" constant="8" symbolic="YES" id="cOu-7h-ifb"/>
+                    <constraint firstItem="nW1-qA-XPv" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="TMr-sX-Kob"/>
                     <constraint firstItem="9" firstAttribute="baseline" secondItem="10" secondAttribute="baseline" id="f4R-HG-wXd"/>
-                    <constraint firstAttribute="trailing" secondItem="8" secondAttribute="trailing" priority="250" constant="323" id="fbM-nR-mdL"/>
                     <constraint firstItem="9" firstAttribute="top" secondItem="fqA-NR-3TG" secondAttribute="bottom" constant="10" id="fbc-AJ-jyx"/>
-                    <constraint firstItem="7" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" id="j6U-bZ-QdV"/>
+                    <constraint firstItem="nW1-qA-XPv" firstAttribute="top" secondItem="5" secondAttribute="top" constant="20" symbolic="YES" id="j6U-bZ-QdV"/>
                     <constraint firstItem="fqA-NR-3TG" firstAttribute="leading" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="jdU-oU-YFO"/>
                     <constraint firstAttribute="trailing" secondItem="fqA-NR-3TG" secondAttribute="trailing" constant="20" symbolic="YES" id="nNg-Rk-qfE"/>
-                    <constraint firstItem="fqA-NR-3TG" firstAttribute="top" secondItem="8" secondAttribute="bottom" constant="7" id="pNN-zE-CZn"/>
+                    <constraint firstItem="fqA-NR-3TG" firstAttribute="top" secondItem="nW1-qA-XPv" secondAttribute="bottom" constant="8" symbolic="YES" id="pNN-zE-CZn"/>
                     <constraint firstItem="10" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tkM-FF-D8y" secondAttribute="trailing" constant="8" symbolic="YES" id="r2G-so-kap"/>
                     <constraint firstAttribute="bottom" secondItem="9" secondAttribute="bottom" constant="20" symbolic="YES" id="xei-td-6nb"/>
                     <constraint firstItem="10" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5" secondAttribute="leading" constant="20" symbolic="YES" id="yeF-Av-22K"/>
