--- a/Vienna/Interfaces/Base.lproj/MainMenu.xib
+++ b/Vienna/Interfaces/Base.lproj/MainMenu.xib
@@ -815,10 +815,13 @@ CA
                                     <action selector="performSharingService:" target="-1" id="K6t-xO-qc5"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Send Link by Email" keyEquivalent="s" id="1073">
+                            <menuItem title="Email Link" keyEquivalent="s" id="1073" customClass="VNASharingServiceMenuItem">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="name" value="emailLink"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="mailLinkToArticlePage:" target="-1" id="WpR-9O-7tX"/>
+                                    <action selector="performSharingService:" target="-1" id="ZNo-wV-gEu"/>
                                 </connections>
                             </menuItem>
                         </items>
